[metadata]
name = mjolnir
version = 0.1.0
summary = MidoNet Automatic Host Registration to Tunnel zone
description-file =
    README.rst
author = Antoni Segura Puimedon
author-email = antonisp@celebor.com
home-page = http://github.com/celebdor/mjolnir
classifier =
    Environment :: CoreOS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    mjolnir = mjolnir.cli:register

[files]
packages =
    mjolnir
